--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -59,6 +59,7 @@
 .gradient-text {
   background: linear-gradient(to right, #8e2de2, #4a00e0, #ff0080);
   -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
 
