--- a/src/components/About.css
+++ b/src/components/About.css
@@ -70,21 +70,25 @@ color: transparent;
 .about-image {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
   height: 100%;
   z-index: 3;
   border-radius: 24px;
   overflow: hidden;
+  transform: translateX(-50%);
   transition: width .35s ease-out, transform .35s ease-out;
   box-shadow: 0 18px 45px rgba(0,0,0,.45);
 }
 
+
 .about-image img {
   width: 100%;
-  height: 150%;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
   filter: brightness(0.9);
 }
+
 
 /* ===================================================
    INFO PANEL
